add basic styling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Kagi ✉️</h1>
+        <input class="search" type="text" placeholder="🔍">
+        <section class="inbox">
+            <ol id="inbox">
+            </ol>
+        </section>
+    </div>
+    <script src="javascript/index.js"></script>
 </body>
 </html>
