add navigation, flex inbox messages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,9 +10,16 @@
     <div class="container">
         <h1>Kagi ✉️</h1>
         <input class="search" type="text" placeholder="🔍">
+        <button class="compose-btn">
+            <a href="pages/compose.html">✍️</a>
+        </button>
         <section class="inbox">
-            <ol id="inbox">
-            </ol>
+            <!-- <ul id="inbox">
+            </ul> -->
+            <ul id="from">
+            </ul>
+            <ul id="message">
+            </ul>
         </section>
     </div>
     <script src="javascript/index.js"></script>
