refactor to table

--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
         <button class="compose-btn">
             <a href="pages/compose.html">✍️</a>
         </button>
-        <section class="inbox">
+        <section id="inbox">
+            <table id="table">
+
+            </table>
             <!-- <ul id="inbox">
             </ul> -->
-            <ul id="from">
-            </ul>
-            <ul id="message">
-            </ul>
+            <!-- <section class="email">
+                <ul id="from">
+                </ul>
+                <ul id="message">
+                </ul>
+                </br>
+            </section> -->
+            
+            
+
         </section>
     </div>
     <script src="javascript/index.js"></script>
