refactor email view, clean

--- a/index.html
+++ b/index.html
@@ -14,21 +14,11 @@
             <a href="pages/compose.html">✍️</a>
         </button>
         <section id="inbox">
-            <table id="table">
+            <table id="table" >
+                <tbody id="emailBody">
 
+                </tbody>
             </table>
-            <!-- <ul id="inbox">
-            </ul> -->
-            <!-- <section class="email">
-                <ul id="from">
-                </ul>
-                <ul id="message">
-                </ul>
-                </br>
-            </section> -->
-            
-            
-
         </section>
     </div>
     <script src="javascript/index.js"></script>
