refactor compose page to index

--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
     <div class="container">
         <h1>Kagi ✉️</h1>
         <input class="search" type="text" placeholder="🔍">
-        <button class="compose-btn">
-            <a href="pages/compose.html">✍️</a>
-        </button>
+        <button id="compose-btn">✍️</button>
+        <div id="compose-email"></div>
         <section id="inbox">
-            <table id="table" >
-                <tbody id="emailBody">
-
-                </tbody>
-            </table>
+            <table id="table" ><tbody id="emailBody"></tbody></table>
         </section>
     </div>
     <script src="javascript/index.js"></script>
