move dummy emails to backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,6 @@
             <table id="table" ><tbody id="emailBody"></tbody></table>
         </section>
     </div>
-    <script src="javascript/index.js"></script>
+    <script src="javascript/index.js" type="module"></script>
 </body>
 </html>
