add inbox outbox tabs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,10 @@
         <input class="search" type="text" placeholder="🔍">
         <button id="compose-btn">✍️</button>
         <div id="compose-email"></div>
+        <section class="tabs">
+            <span class="tab">inbox</span>
+            <span class="tab">outbox</span>
+        </section>
         <section id="inbox">
             <table id="table" ><tbody id="emailBody"></tbody></table>
         </section>
