add dummySent, update dummyInbox, add styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
         <button id="compose-btn">✍️</button>
         <div id="compose-email"></div>
         <section class="tabs">
-            <span class="tab">inbox</span>
-            <span class="tab">outbox</span>
+            <span id="inbox" class="tab">inbox</span>
+            <span id="sent" class="tab">sent</span>
         </section>
         <section id="inbox">
             <table id="table" ><tbody id="emailBody"></tbody></table>
