--- a/email-local/frontend/index.html
+++ b/email-local/frontend/index.html
@@ -20,6 +20,7 @@
             <table id="table" ><tbody id="emailBody"></tbody></table>
         </section>
     </div>
+    <footer><p>erica thompson | <a href="http://ericathompson.github.io" target="_blank">portfolio</a> | <a href="https://www.github.com/ericathompson" target="_blank">github</a> </p></footer>
     <script src="javascript/index.js" type="module"></script>
 </body>
 </html>
