Add trash tab and confirmed permanent deletion

--- a/email-local/frontend/index.html
+++ b/email-local/frontend/index.html
@@ -16,6 +16,7 @@
         <section class="tabs">
             <span id="inbox" class="tab">inbox</span>
             <span id="sent" class="tab">sent</span>
+            <span id="trash" class="tab">trash</span>
         </section>
         <section id="inbox">
             <table id="table" ><tbody id="emailBody"></tbody></table>
