add login html scaffolding

--- a/email-local/frontend/pages/login/login.html
+++ b/email-local/frontend/pages/login/login.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/login.css" />
+    <title>Login</title>
+    <link rel="stylesheet" href="../email/index.css" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>✉️</text></svg>">
 </head>
 <body>
+    <section>
+        <div class="container">
+            <h1>Login</h1>
+            <form action="submit">
+                <input type="text" value="Demo">
+                <input type="email" value="me@me.com">
+                <input type="password" value="DemoUser">
+                <button type="submit">Login</button>
+            </form>
+            <p>No Account? Register</p>
+        </div>
+    </section>
+    <footer class="footer"><p>erica thompson | <a href="http://ericathompson.github.io" target="_blank">portfolio</a> | <a href="https://www.github.com/ericathompson" target="_blank">github</a></p></footer>
     <script type="module" src="../javascript/login.js"></script>
 </body>
 </html>
