add login functionality

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -20,9 +20,10 @@
                     <button class="send-btn">Anonymous</button>
                 </section>
                 <section id="email-form" class="email-login">
-                    <input type="email" placeholder="email = me@me.com" value="me@me.com">
-                    <input type="password" placeholder="password = DemoUser" value="DemoUser">
+                    <input class="login-email" type="email" placeholder="email = my.dev.demo.user@gmail.com" value="my.dev.demo.user@gmail.com">
+                    <input class="login-password" type="password" placeholder="password = demouser" value="demouser">
                     <button id="login-btn" class="send-btn">Login</button>
+                    <p class="login-error">Incorrect Login</p>
                 </section>
             </section>
             <a href="" class="link">No Account? Register</a>
