--- a/pages/email/index.html
+++ b/pages/email/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>✉️</text></svg>">
 </head>
 <body>
-    <div class="container">
+    <div id="email-container" class="container">
         <h1>Kagi ✉️</h1>
         <input class="search" type="text" placeholder="🔍">
         <button id="compose-btn">✍️</button>
