--- a/pages/email/index.html
+++ b/pages/email/index.html
@@ -25,6 +25,6 @@
     </div>
     <footer class="footer"><p>erica thompson | <a href="http://ericathompson.github.io" target="_blank">portfolio</a> | <a href="https://www.github.com/ericathompson" target="_blank">github</a> </p></footer>
     <script src="index.js" type="module"></script>
-    <script src="../../javascript/seed.js" type="module"></script>
+    <script src="../../backend/seed.js" type="module"></script>
 </body>
 </html>
