--- a/pages/email/email.html
+++ b/pages/email/email.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="email.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kagi Email</title>
@@ -24,7 +24,7 @@
         </section>
     </div>
     <footer class="footer"><p>erica thompson | <a href="http://ericathompson.github.io" target="_blank">portfolio</a> | <a href="https://www.github.com/ericathompson" target="_blank">github</a> </p></footer>
-    <script src="index.js" type="module"></script>
+    <script src="email.js" type="module"></script>
     <script src="../../backend/seed.js" type="module"></script>
 </body>
 </html>
