Remove pages directory for deployment

--- a/login/index.html
+++ b/login/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Kagi</title>
-    <link rel="stylesheet" href="/pages/email/email.css" />
-    <link rel="stylesheet" href="/pages/login/index.css" />
+    <link rel="stylesheet" href="/email/email.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>✉️</text></svg>">
 </head>
 <body>
@@ -35,6 +35,6 @@
             </section>
         </section>
     <footer class="footer"><p>erica thompson | <a href="http://ericathompson.github.io" target="_blank">portfolio</a> | <a href="https://www.github.com/ericathompson" target="_blank">github</a></p></footer>
-    <script type="module" src="/pages/login/index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
