Update README instructions, add helpful code

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <input class="register-email" type="email" placeholder="email" autocomplete="off">
                     <input class="register-password" type="password" placeholder="password" autocomplete="off">
                     <button id="register-btn" class="send-btn">Create Account</button>
-                    <p class="register-error">test</p>
-
+                    <p class="register-error"></p>
                 </section>
             </section>
         </section>
