remove search bar

--- a/email/email.html
+++ b/email/email.html
@@ -11,7 +11,7 @@
     <header><button class="logout-btn">logout</button></header>
     <div id="email-container" class="container">
         <h1>Kagi ✉️</h1>
-        <input class="search" type="text" placeholder="🔍">
+        <!-- <input class="search" type="text" placeholder="🔍"> -->
         <button id="compose-btn" class="compose-btn">✍️</button>
         <div id="compose-email"></div>
         <section class="tabs">
