Add second demo user for testing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <section class="login">
                 <h1>Kagi Email ✉️</h1>
                 <section class="login-types">
-                    <button id="demo-login-btn" class="send-btn">Demo User</button>
+                    <button id="demo-login-btn-one" class="send-btn">Demo User 1</button>
+                    <button id="demo-login-btn-two" class="send-btn">Demo User 2</button>
                     <button id="email-btn" class="send-btn">Email</button>
                 </section>
                 <section id="email-form" class="email-login">
